<resources>
    <string name="app_name">z-lp</string>

    <string name="notice">Notice</string>
    <string name="warning">Warning</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="agree">Agree</string>
    <string name="reject">Reject</string>
    <string name="retry">Retry</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ad">Advertisement</string>
    <string name="search">search</string>
    <string name="detail">Detail</string>
    <string name="pass">Pass</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="create">Create</string>
    <string name="create_account">Create an account?</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="password_different">password different</string>
    <string name="username_empty">username input empty</string>
    <string name="password_empty">password input empty</string>
    <string name="email_empty">email input empty</string>
    <string name="register_fail">Register fail , please try again</string>
    <string name="login_fail">Login fail , please check user information and try again</string>
    <string name="no_support">Sorry, The device is not supported!</string>
    <string name="network_error">Network connect error , please check </string>
    <string name="copyright">All resources are from internet, for educational purpose only</string>
    <string name="add_favorite"> add to favorite</string>
    <string name="remove_favorite"> remove from favorite</string>
    <string name="device_notice">The device is not supported!</string>
    <string name="exit_notice">Press back again to exit program</string>
    <string name="error_play">Channel error, please try again later!</string>
    <string name="update_notice">Update Notice</string>
    <string name="login_info">Account login on other device,please login again</string>
    <string name="app_no_install">Selected app not installed, please go to app market to download and install</string>
    <string name="confirm_exit">Do you confirm exit?</string>
    <string name="data_loading">Loading...</string>
    <string name="data_load_error">Load failure, please try again later</string>
    <string name="favorite_load_empty">Favorites folder is empty</string>
    <string name="favorite_empty">favorite is empty</string>
    <string name="hi">Hi</string>
    <string name="playing">Now playing</string>
    <string name="notice1">Please go to app market to download and install</string>
    <string name="back">PRESS BACK TO EXIT</string>
    <string name="skip_ad">ACTIVE LD MEMBER, SKIP ADS </string>
    <string name="skip_ad1">JOIN LD GOLD TO SKIP ALL ADS </string>
    <string name="skip">SKIP</string>
    <string name="authority">PRESS BACK TO EXIT</string>
    <string name="agreement">Agreement</string>
    <string name="error_msg1">Channel down</string>
    <string name="error_msg2">Video/Voice don’t sync</string>
    <string name="error_msg3">Channel and name don’t match</string>
    <string name="error_input_format">Message input format error</string>
    <string name="agreement_content">LivePlay is absolutely legal and contain only links to other sites on the Internet （youtube, ZStream, Dizimag, TheVideo,etc). It does not host or upload any videos, films or media files.  LivePlay simply aggregates links in a convenient, user-friendly interface.  LivePlay is not responsible for the accuracy, compliance, copyright, legality, decency, or any other aspect of the content of other linked sites.  If you have any legal issues, please contact the appropriate media file owners or host sites.   Any legal issues regarding the free online tv, tv shows and movies on this application should be taken up with the actual file hosts and providers themselves, as we’re not affiliated with them.

\r\n\nIn case of copyright infringement, please directly contact the responsible parties.  LivePlay operates as a search engine of TV, TV Shows and movies content found publicly on the internet, in principle conducting in the same way as Google.  However, LivePlay strongly believes in the protection of intellectual property and would be willing to assist when possible and applicable.  LivePlay does not accept responsibility or contents hosted on third party websites, nor do we upload videos ourselves or encourage others to do so.  The videos are streamed directly form the third-party video sharing services mentioned above.  All other trademarks, logos, and images are the property of their respective and rightful owners.

\r\n\nUse LivePlay at your own risk.</string>
    <string name="notice_protect">Parental control:\nTo setup,please type in your password and confirm. If not required, please press cancel</string>

</resources>
