<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog"
    android:layout_width="match_parent"
    android:padding="30dp"
    android:layout_height="wrap_content">

    <TextView
        android:textSize="30sp"
        android:textColor="@color/colorGray"
        android:text="@string/notice_protect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/etP1"
        android:textSize="40sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorGray"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/etP2"
        android:textSize="40sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorGray"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btConfirm"
        android:text="@string/confirm"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:background="@drawable/bg_button_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btCancel"
        android:text="@string/cancel"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:background="@drawable/bg_button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
